--- a/cix-main.org
+++ b/cix-main.org
@@ -1,6 +1,6 @@
 # File       : cix-main.org
 # Created    : Sat 07 Nov 2015 22:58:38
-# Modified   : <2017-9-17 Sun 21:32:20 BST> sharlatan
+# Modified   : <2017-9-25 Mon 23:22:40 BST> sharlatan
 # Maintainer : sharlatan <sharlatanus@gmail.com>
 # Sinopsis   : Index of of all files.
 
@@ -75,68 +75,68 @@ on *GNU/Linux*
 
 - *Core* /usually it contains on the most distributions/
   + bsd :: list of common bsd commands
-  + [[./spices/cix-busybox.org][BusyBox]] :: the swiss army knife of embedded Linux
-  + [[./spices/cix-gnu-coreutils.org][gnu-coreutis]] :: basic file, shell and text manipulation utilities: =Linux FreeBSD=
-  + [[./spices/cix-kbd.org][kbd]] :: tools for configuring the console (keyboard, virtual terminals, etc.)
+  + [[./spices/cix-busybox.org][BusyBox]] :: the swiss army knife of embedded Linux: =GNU/Linux= =FreeBSD=
+  + [[./spices/cix-gnu-coreutils.org][GNU-coreutis]] :: basic file, shell and text manipulation utilities: =GNU/Linux= =FreeBSD= =HP-UX= =AUX=
+  + [[./spices/cix-kbd.org][kbd]] :: tools for configuring the console: =GNU/Linux=
   + [[./spices/cix-man-db.org][man-db]] :: tools for searching and reading man pages: =GNU/Linux=
-  + [[file:spices/cix-ncurses.org][ncurses]] :: terminal-independent method of updating character screens
-  + [[file:./spices/cix-the-heirloom-project.org][the heirloom project]] :: traditional implementations of standard UNIX utils
-  + [[./spices/cix-toybox.org][toybox]]  :: common Linux commands for embedded systems (POSIX-2008 and LSB 4.1).
+  + [[file:spices/cix-ncurses.org][ncurses]] :: terminal-independent method of updating character screens: =GNU/Linux= =FreeBSD= =UNIX= =OS-X= =NetBSD=
+  + [[file:./spices/cix-the-heirloom-project.org][the heirloom project]] :: traditional implementations of standard UNIX utils: =SanOS=
+  + [[./spices/cix-toybox.org][toybox]]  :: common Linux commands for embedded systems (POSIX-2008 and LSB 4.1): =GNU/Linux= =Android=
   + [[./spices/cix-util-linux.org][util-linux]] :: is a standard package of the Linux operating system: =GNU/Linux=
 
-- *File* /everything is a file/!
-  + [[file:./spices/cix-diffutils.org][diffutils]] :: a gnu collection of diff utilities
-  + [[./spices/cix-emacs.org][emacs]] :: gnu emacs text editor
-  + [[./spices/cix-file.org][file]] :: a utility for determining file types: =Linux NetBSD FreeBSD OS/2 DOS Win=
-  + [[./spices/cix-gawk.org][gawk]] :: the gnu version of the awk text processing utility
+- *File* /everything is a file/
+  + [[file:./spices/cix-diffutils.org][diffutils]] :: a GNU collection of diff utilities
+  + [[./spices/cix-emacs.org][emacs]] :: GNU emacs text editor
+  + [[./spices/cix-file.org][file]] :: a utility for determining file types: =GNU/Linux= =NetBSD= =FreeBSD= =OS/2= =DOS= =Windows=
+  + [[./spices/cix-gawk.org][gawk]] :: the GNU version of the AWK text processing utility: =GNU/Linux=
   + [[./spices/cix-less.org][less]] :: a text file browser similar to more, but better: =GNU/Linux= =UNIX= =OS-X=
-  + [[./spices/cix-lsof.org][lsof]] :: a utility which lists open files on a Linux/unix system
-  + [[./spices/cix-micro.org][micro]] :: a modern and intuitive terminal-based text editor
-  + [[./spices/cix-nano.org][nano]] :: a small text editor
-  + [[./spices/cix-sed.org][sed]] :: a gnu stream text editor
+  + [[./spices/cix-lsof.org][lsof]] :: a utility which lists open files on *nix systems: =GNU/Linux= =FreeBSD= =OS-X= =Solaris=
+  + [[./spices/cix-micro.org][micro]] :: a modern and intuitive terminal-based text editor: =GNU/Linux= =OS-X= =Windows=
+  + [[./spices/cix-nano.org][nano]] :: a small text editor: =GNU/Linux=
+  + [[./spices/cix-sed.org][sed]] :: a GNU stream text editor: =GNU/Linux=
   + [[./spices/cix-vim.org][vim]] :: recent enhancements of vim: =FreeBSD= =GNU/Linux= =OS-X=
 
 - *Transfare-sync* /put me up, put me down/
-  + [[file:./spices/cix-curl.org][curl]] :: a utility for getting files from remote servers: =Linux FreeBSD=
-  + [[./spices/cix-lsyncd.org][lsyncd]] :: live syncing daemon synchronizes local directories with remote targиets
-  + [[file:./spices/cix-rsync.org][rsync]] :: a program for synchronizing files over a network
-  + [[./spices/cix-vsftp.org][vsftp]] :: very secure ftp daemon
-  + [[file:./spices/cix-wget.org][wget]] :: a utility for retrieving files using the http or ftp protocols
+  + [[file:./spices/cix-curl.org][curl]] :: a utility for getting files from remote servers: =AIX= =AmigaOS= =BeOS= =DOS= =DragonFly-BSD= =FreeBSD= =HP-UX= =Haiku= =GNU/Hurd= =IRIX= =GNU/Linux= =OS-X= =MiNT= =MINIX= =NetBSD= =NetWare= =Nexenta= =OS/2= =OpenBSD= =Plan9= =QNX= =RISC-OS= =Solaris= =Syllable= =Tru64-UNIX= =UnixWare= =VMS= =Windows= =z/OS=
+  + [[./spices/cix-lsyncd.org][lsyncd]] :: live syncing daemon synchronizes local directories with remote targets: =GNU/Linux=
+  + [[file:./spices/cix-rsync.org][rsync]] :: a program for synchronizing files over a network: =FreeBSD= =GNU/Linux= =Windows=
+  + [[./spices/cix-vsftpd.org][vsftpd]] :: very secure ftp daemon: =GNU/Linux=
+  + [[file:./spices/cix-wget.org][wget]] :: a utility for retrieving files using the http or ftp protocols: =GNU/Linux= =Windows= =OS-X= =OpenVMS= =HP-UX= =MorphOS= =AmigaOS=
+  + [[file:./spices/cix-tym.org][tym]] :: Time rSync Machine
 
 - *Filesystem* /partitions, filesystem craft and check/
   + [[./spices/cix-acl.org][acl]] :: access control list utilities
   + [[./spices/cix-autofs.org][autofs]] :: a tool for automatically mounting and unmounting filesystems
-  + bindf :: fuse filesystem to mirror a directory
+  + [[file:./spices/cix-bindfs.org][bindfs]] :: fuse filesystem to mirror a directory
   + [[./spices/cix-btrfs-progs.org][btrfs-progs]] :: userspace programs for btrfs.
   + [[./spices/cix-curlftpfs.org][curlftpfs]] :: is a fs for accessing ftp hosts based on fuse and libcurl
   + [[./spices/cix-e2fsprogs.org][e2fsprogs]] :: filesystem utilities for use with ext2/3/4
-  + glusterfs :: distributed file system
+  + [[file:./spices/cix-glusterfs.org][glusterfs]] :: distributed file system: =GNU/Linux FreeBSD NetBSD OpenSolaris OS-X=
   + [[./spices/cix-lvm2.org][lvm2]] :: userland logical volume management tools
   + [[./spices/cix-nfs.org][nfs]] :: utilities for rall out NFS share 
   + [[file:./spices/cix-gnu-parted.org][parted]] :: the GNU disk partition manipulation program: =GNU/Linux=
   + [[./spices/cix-quota.org][quota]] :: system tools for monitoring users disk usage
 
 - *Utillities* /be silent and help ppls/
-  + [[./spices/cix-gnu-binutils.org][gnu-binutils]] :: collection of binary tools
+  + [[./spices/cix-gnu-binutils.org][GNU-binutils]] :: collection of binary tools
   + [[./spices/cix-moreutils.org][moreutils]] :: tools that nobody thought to write when unix was young
   + [[file:./spices/cix-parallel.org][parallel]] :: shell tool for executing jobs in parallel
   + [[./spices/cix-pm-utils.org][pm-utils]] :: suspend and powerstate setting framework
   + [[./spices/cix-procps-ng.org][procps-ng]] :: utilities for monitoring your system and its processes
   + [[./spices/cix-psmisc.org][psmisc]] :: is a set of small utilities that use the proc filesystem.
   + [[./spices/cix-shadow-utils.org][shadow-utils]] :: utilities for managing accounts and shadow password files
-  + [[./spices/cix-strace.org][strace]] :: tracks and displays system calls associated with a running process
   + [[file:./spices/cix-smem.org][smem]] :: Report application memory usage in a meaningful way
+  + [[file:./spices/cix-vmtouch.org][vmtouch]] :: Portable file system cache diagnostics and control
   + [likwid]  ::
 
 - *Hardware* /hard as a rock!/
-  + [dtrace] ::
-  + [iw] :: A nl80211 based wireless configuration tool
+  + [[file:./spices/cix-iw.org][iw]] :: A nl80211 based wireless configuration tool: =GNU/Linux=
   + [[./spices/cix-dmidecode.org][dmidecode]] :: tool to analyse bios dmi data: =GNU/Linux= =FreeBSD= =NetBSD= =OpenBSD= =BeOS= =Solaris= =Haiku=
   + [[./spices/cix-lshw.org][lshw]] :: hardware lister: =GNU/Linux=
   + [[file:./spices/cix-oprofile.org][OProfile]] :: System wide profiler: =GNU/Linux=
   + [[./spices/cix-pciutils.org][pciutils]] :: pci bus related utilities: =FreeBSD= =NetBSD= =OpenBSD= =GNU/Linux= =FreeBSD= =Solaris/i386= =AIX= =GNU/Hurdd= =Windows= =Cygwin= =BeOS= =Haiku= =Darwin=
   + [[./spices/cix-perf.org][perf]] :: Performance monitoring for the Linux kerne: =GNU/Linux=
-  + [[./spices/cix-smartmontools.org][smartmontools]] :: tools for monitoring smart capable hard disks: =OS-X= =GNU/Linux= =FreeBSD= =NetBSD= =OpenBSD= =Solaris= =OS/2= =Cygwin= =QNX= =eComStation= =Win=
+  + [[./spices/cix-smartmontools.org][smartmontools]] :: tools for monitoring smart capable hard disks: =OS-X= =GNU/Linux= =FreeBSD= =NetBSD= =OpenBSD= =Solaris= =OS/2= =Cygwin= =QNX= =eComStation= =Windows=
   + [[./spices/cix-stress.org][stress]] :: A tool to put given subsystems under a specified load: =GNU/Linux= =Gentoo= =OpenBSD= =FreeBSD=
   + [[file:./spices/cix-stress-ng.org][stress-ng]] :: stress test a computer system in various ways: =GNU/Linux= =GNU/Hurd= =FreeBSD= =OpenBSD= =NetBSD= =FreeBSD= =MINIX= =OpenIndiana=
   + [[./spices/cix-usbutils.org][usbutils]] :: Linux usb utilities: =GNU/Linux=
@@ -145,18 +145,18 @@ on *GNU/Linux*
   + [[./spices/cix-ack.org][ack]] :: grep-like text finder
   + [[./spices/cix-ag.org][ag]] :: super-fast text searching tool - The Silver Searcher
   + [[./spices/cix-fdupes.org][fdupes]] :: finds duplicate files in a given set of directories
-  + [[./spices/cix-gnu-findutils.org][gnu-findutils]] :: the gnu versions of find utilities (find and xargs)
-  + [[./spices/cix-gnu-grep.org][gnu-grep]] :: pattern matching utilities
-  + [[file:./spices/cix-jq.org][jq]] :: command-line json processor: =OS-X= =FreeBSD= =Solaris= =GNU/Linux= =Win=
+  + [[./spices/cix-gnu-findutils.org][GNU-findutils]] :: the GNU versions of find utilities (find and xargs)
+  + [[./spices/cix-gnu-grep.org][GNU-grep]] :: pattern matching utilities
+  + [[file:./spices/cix-jq.org][jq]] :: command-line json processor: =OS-X= =FreeBSD= =Solaris= =GNU/Linux= =Windows=
   + [[file:./spices/cix-ripgrep.org][ripgrep]] :: rg combines the usability of The Silver Searcher with the raw speed of grep.
   + [[file:./spices/cix-sift.org][sift]] :: A fast and powerful alternative to grep: =OS-X= =GNU/Linux=
   + [[file:./spices/cix-ucg.org][ucg]] :: extremely fast grep-like tool specialized for searching large bodies of source code.
 
 - *Compress-archive* /I'm a pac man/
   + [[./spices/cix-bzip2.org][bzip2]] :: a file compression utility
-  + [[./spices/cix-cpio.org][cpio]] :: a gnu archiving program
+  + [[./spices/cix-cpio.org][cpio]] :: a GNU archiving program
   + [[./spices/cix-tar.org][tar]] :: a file archiving program
-  + [[./spices/cix-gzip.org][gzip]] :: the gnu data compression program
+  + [[./spices/cix-gzip.org][gzip]] :: the GNU data compression program
   + [[./spices/cix-unizp.org][unzip]] :: a utility for unpacking zip files
   + [[./spices/cix-lrzip.org][lrzip]] :: compression program optimized for large files
   + [[./spices/cix-pax.org][pax]] :: POSIX file system archiver
@@ -165,18 +165,21 @@ on *GNU/Linux*
 - *Networking* /we all live in the someone's subnet in/
   + [[./spices/cix-bind-utils.org][bind-utils]] :: utilities for querying dns name server
   + [[file:./spices/cix-bridge-utils.org][bridge-utils]] :: utilities for configuring the Linux ethernet bridge
-  + [[./spices/cix-gnu-inetutils.org][gnu-inetutils]] :: a collection of common network programs
+  + [[./spices/cix-gnu-inetutils.org][GNU-inetutils]] :: a collection of common network programs
   + [[./spices/cix-iproute2.org][iproute2]] :: routing commands and utilities
-  + [[./spices/cix-iptables.org][iptables]] :: Linux kernel packet filtering capabilities: *Linux*
-  + [[./spices/cix-iputils.org][iputils]] :: network monitoring tools including ping: *Linux*
-  + [[./spices/cix-net-snmp.org][net-snmp]] :: a collection of snmp protocol tools and libraries: =GNU/Linux= =FreeBSD= =OpenBSD= =Solaris/SPARC= =OS-X= =AIX= =HP-UX= =NetBSD= =OSF= =SunOS= =Ultrix= =QNX= =Dynix= =IRIX= =Win=
+  + [[./spices/cix-iptables.org][iptables]] :: Linux kernel packet filtering capabilities: =GNU/Linux=
+  + [[./spices/cix-iputils.org][iputils]] :: network monitoring tools including ping: =GNU/Linux= 
+  + [[./spices/cix-net-snmp.org][net-snmp]] :: a collection of snmp protocol tools and libraries: =GNU/Linux= =FreeBSD= =OpenBSD= =Solaris/SPARC= =OS-X= =AIX= =HP-UX= =NetBSD= =OSF= =SunOS= =Ultrix= =QNX= =Dynix= =IRIX= =Windows=
   + [[./spices/cix-net-tools.org][net-tools]] :: collection of base networking utilities
   + [[./spices/cix-nmap.org][nmap]] :: network exploration tool and security scanner
   + [[./spices/cix-openssh.org][OpenSSH]] :: an open source implementation of ssh protocol: =AIX= =HP-UX= =IRIX= =GNU/Linux= =Next= =Sco= =Sni/Reliant= =Unix= =Solaris= =Digital= =Unix/Tru64/Osf= =Mac= =Os-X= =Cygwin=
   + [[./spices/cix-tcpdump.org][tcpdump]] :: dump traffic on a network: =GNU/Linux= =FreeBSD=
+  + [[file:./spices/cix-netperf.org][netperf]] :: TCP/UDP/sockets/etc performance benchmark: =FreeBSD= =AIX= =Solaris= =GNU/Linux= =HP-UX= =IRIX=
+  + [[file:./spices/cix-nmap-ncat.org][nmap-ncat]] :: Nmap's Netcat replacement
+  + [[file:./spices/cix-netcat.org][netcat]] :: a simple Unix utility which reads and writes data across network connections, using TCP or UDP protocol: =DOS= =ULTRIX= =SunOS= =Solaris= =AIX= =GNU/Linux= =IRIX= =OSF= =NetBSD= =HP-UX= =AUX= =NeXT=
 
 - *Shell* /not just sand.../
-  + [[./spices/cix-gnu-bash.org][gnu-bash]] :: gnu bash shell built in commands
+  + [[./spices/cix-gnu-bash.org][GNU-bash]] :: GNU bash shell built in commands
   + [[./spices/cix-fish-shell.org][fish-shell]] ::  a friendly interactive shell
   + [[./spices/cix-screen.org][screen]] :: a screen manager that supports multiple logins on one terminal
   + [[./spices/cix-tmux.org][tmux]] :: a terminal multiplexer
@@ -210,17 +213,19 @@ on *GNU/Linux*
   + [[file:./spices/cix-gnu-grub2.org][grub2]] :: Bootloader with support multiboot and more: =GNU/Linux= 
 
 - *Development* /in the fields of observation chance favors only the prepared mind./
-  + [[./spices/cix-autoconf.org][autoconf]] :: a gnu tool for automatically configuring source code
+  + [[./spices/cix-autoconf.org][autoconf]] :: a GNU tool for automatically configuring source code
   + [[file:./spices/cix-automake.org][automake]] :: A GNU tool for automatically creating Makefiles
   + [[file:./spices/cix-gnu-bison.org][bison]] ::  A GNU general-purpose parser generator
   + [[file:./spices/cix-ctags.org][ctags]] :: A C programming language indexing and/or cross-reference tool
   + [[./spices/cix-gcc.org][gcc]] :: various compilers (c, c++, objective-c, java, ...)
-  + [[./spices/cix-gdb.org][gdb]] :: a gnu source-level debugger for C, C++, Fortran, Go and other languages
+  + [[./spices/cix-gdb.org][gdb]] :: a GNU source-level debugger for C, C++, Fortran, Go and other languages
   + [[file:./spices/cix-git.org][git]] :: Fast Version Control System
   + [[./spices/cix-glibc.org][glibc]] :: common binaries and locale data for glibc
   + [[file:./spices/cix-global.org][global]] :: Source code tag system
   + [[file:./spices/cix-make.org][make]] :: A tool which simplifies the build process for users
   + [[file:./spices/cix-valgrind.org][valgrind]] :: Tool for finding memory management bugs in programs
+  + [[file:./spices/cix-cmake.org][cmake]] :: Cross-platform make system
+  + [[file:./spices/cix-gnu-libtool.org][libtool]] :: The GNU Portable Library Tool: =GNU/Linux= =Solaris=
 
 - *Packaging* /pack me up, pack me down/
   + [[./spices/cix-apt.org][apt]] :: Debian/Ubuntu commandline package panager.
@@ -234,12 +239,20 @@ on *GNU/Linux*
 - *Research* /I've got a clue!/
   + [[./spices/cix-netkit.org][Linux Netkit]] :: Utilities for managing processes on your system
 
-- *Kernel* /Go to basic/
+- *Kernel-traces* /Go to basic/
   + [[./spices/cix-kmod.org][kmod]] :: Linux kernel module management utilities
+  + [[file:./spices/cix-dtrace.org][dtrace]] :: comprehensive dynamic tracing framework: =Solaris= =FreeBSD= =NetBSD= =OS-X=
+  + [[./spices/cix-strace.org][strace]] :: tracks and displays system calls associated with a running process
+  + ftrace ::
+  + ktrace ::
+  + ltrace ::
+  + SystemTap ::
+  + LTTng ::
+  + ProbeVue :: 
 
 - *Cryptograpy* /Who breaks Enigma code?/
-  + [[./spices/cix-gnu-pg.org][gnupg]] :: A GNU utility for secure communication and data storage
------
+  + [[./spices/cix-gnu-pg.org][GNUpg]] :: A GNU utility for secure communication and data storage
+
 * Configuration
 Header example of configuration file:
 #+BEGIN_SRC sh :results output org replace :exports results
