--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 # File           : README.org
 # Created        : <2016-11-16 Wed 00:51:06 GMT>
-# Last Modified  : <2017-9-25 Mon 12:22:54 BST> hellseher
+# Last Modified  : <2017-9-27 Wed 00:33:54 BST> sharlatan
 # Author         : sharlatan
 # Short          : README-en
 
@@ -71,9 +71,12 @@ QTY  CMD       PKG
 2    rsync     rsync
 2    objdump   gnu-binutils
 2    nohup     gnu-coreutils
+2    nc        nmap-ncat
 2    nc        netcat
 1    whatis    man-db
+1    usermod   shadow-utils
 1    udevadm   systemd
+1    strings   gnu-binutils
 1    smem      smem
 1    set       gnu-bash
 1    rm        gnu-coreutils
@@ -103,6 +106,6 @@ QTY  CMD       PKG
 
 Distribution per example:
 
-Onliners:  178
+Onliners:  182
 Scripts:   101
 #+END_SRC
