--- a/spices/cix-file.org
+++ b/spices/cix-file.org
@@ -1,31 +1,69 @@
-# File           : cix-file.org
-# Created        : <2017-07-12 Wed 00:22:46 BST>
-# Modified       : <2017-9-03 Sun 22:41:38 BST> sharlatan
-# Author         : sharlatan
-# Maintainer(s)  :
-# Sinopsis : A utility for determining file types.
+# File          : cix-file.org
+# Created       : <2017-07-12 Wed 00:22:46 BST>
+# Modified      : <2017-10-01 Sun 22:34:51 BST> sharlatan
+# Author        : sharlatan
+# Maintainer(s) :
+# Sinopsis      : A utility for determining file types.
 
 #+OPTIONS: num:nil
 
 [[file:../cix-main.org][|≣|]]
-#+TITLE: File
+#+TITLE: file
 
-|--------------+--------------------------------|
-| *Author*       | Ian Darwin                     |
-| *Contributors* | Geoff Collyer,                 |
-|              | Guy Harris, Chris Lowth,       |
-|              | Eric Fischer,  Christos Zoulas |
-| *Released*     | 1987                           |
-| *Source*       | [[https://github.com/file/file][file.git]]                       |
-| *Info*         |                                |
-|--------------+--------------------------------|
+|----------------+------------------|
+| *Author*       | Ian Darwin       |
+| *Contributors* | Christos Zoulas, |
+|                | Geoff Collyer,   |
+|                | Guy Harris,      |
+|                | Chris Lowth,     |
+| *Released*     | 1973, 1987       |
+| *Man*          | [[http://man7.org/linux/man-pages/man1/file.1.html][file(1)]]          |
+| *Source*       | [[https://github.com/file/file][file.git]]         |
+| *Homepage*     | [[http://www.darwinsys.com/file/][file.web]]         |
+|----------------+------------------|
 
 The =file= command is used to identify a particular file according to the type of
 data contained by the file.  =file= can identify many different file types,
 including ELF binaries, system libraries, RPM packages, and different graphics
 formats.
 -----
+* Receipts
 ** file
-*** file::options
+*** file ::options
+
+| OPT                         | TYPE | V++ | V-- | DESC                                                        |
+|-----------------------------+------+-----+-----+-------------------------------------------------------------|
+| =--apple=                   |      |     |     | output the Apple CREATOR/TYPE                               |
+| =--extension=               |      |     |     | output a slash-separated list of extensions                 |
+| =--help=                    |      |     |     | display this help and exit                                  |
+| =--mime-encoding=           |      |     |     | output the MIME encoding                                    |
+| =--mime-type=               |      |     |     | output the MIME type                                        |
+| =-0, --print0=              |      |     |     | terminate filenames with ASCII NUL                          |
+| =-C, --compile=             |      |     |     | compile file specified by -m                                |
+| =-F, --separator STRING=    |      |     |     | use string as separator instead of `:'                      |
+| =-L, --dereference=         |      |     |     | follow symlinks                                             |
+| =-N, --no-pad=              |      |     |     | do not pad output                                           |
+| =-P, --parameter=           |      |     |     | set file engine parameter limits                            |
+| =-Z, --uncompress-noreport= |      |     |     | only print the contents of compressed files                 |
+| =-b, --brief=               |      |     |     | do not prepend filenames to output lines                    |
+| =-c, --checking-printout=   |      |     |     | print the parsed form of the magic file                     |
+| =-d, --debug=               |      |     |     | print debugging messages                                    |
+| =-e, --exclude TEST=        |      |     |     | exclude TEST from the list of test to be performed for file |
+| =-f, --files-from FILE=     |      |     |     | read the filenames to be examined from FILE                 |
+| =-h, --no-dereference=      |      |     |     | don't follow symlinks (default)                             |
+| =-i, --mime=                |      |     |     | output MIME type strings (--mime-type and --mime-encoding)  |
+| =-k, --keep-going=          |      |     |     | don't stop at the first match                               |
+| =-l, --list=                |      |     |     | list magic strength                                         |
+| =-m, --magic-file LIST=     |      |     |     | use LIST as a colon-separated list of magic  number files   |
+| =-n, --no-buffer=           |      |     |     | do not buffer output                                        |
+| =-p, --preserve-date=       |      |     |     | preserve access times on files                              |
+| =-r, --raw=                 |      |     |     | don't translate unprintable chars to \ooo                   |
+| =-s, --special-files=       |      |     |     | treat special (block/char devices) files as ordinary ones   |
+| =-v, --version=             |      |     |     | output version information and exit                         |
+| =-z, --uncompress=          |      |     |     | try to look inside compressed files                         |
+|-----------------------------+------+-----+-----+-------------------------------------------------------------|
+
+*** file ::examples
+
 
 # End of cix-file.org
