--- a/spices/cix-sed.org
+++ b/spices/cix-sed.org
@@ -1,6 +1,6 @@
 # File          : cix-sed.org
 # Created       : <2016-11-04 Fri 22:49:14 GMT>
-# Modified      : <2017-9-04 Mon 22:38:08 BST> sharlatan
+# Modified      : <2017-10-04 Wed 11:56:30 BST> hellseher
 # Author        : sharlatan
 # Maintainer(s) :
 # Sinopsis      : A GNU stream text editor
@@ -9,19 +9,19 @@
 
 [[file:../cix-main.org][|≣|]]
 #+TITLE: sed
-|-----------------+-----------------|
+|---------------+-----------------|
 | *Author(s)*     | Lee E. McMahon, |
-|                 | Jay Fenlason,   |
-|                 | Tom Lord        |
+|               | Jay Fenlason,   |
+|               | Tom Lord        |
 | *Maintainer(s)* | Ken Pizzini,    |
-|                 | Paolo Bozini,   |
-|                 | Jim Meyering,   |
-|                 | Assaf Gordon    |
+|               | Paolo Bozini,   |
+|               | Jim Meyering,   |
+|               | Assaf Gordon    |
 | *Released*      | 1974            |
-|                 | gnu-1989        |
+|               | gnu-1989        |
 | *Source*        | [[http://git.savannah.gnu.org/gitweb/?p%3Dsed.git][sed.git]]         |
 | *Info*          |                 |
-|-----------------+-----------------|
+|---------------+-----------------|
 
 The =sed= (Stream EDitor) editor is a stream or batch (non-interactive) editor.
 Sed takes text as input, performs an operation or set of operations on the text
@@ -56,9 +56,6 @@ command line.
 | =\n=    | Group number where n is any integer number |
 |---------+--------------------------------------------|
 
-*** sed::options
-| OPT              | TYPE | ++V | --V | DESC |
-| =-i, --in-place= | str  |     |     |      |
 
 *** sed::examples
 **** sed-161122223125
@@ -131,10 +128,14 @@ only return the matched string:
 :    ~$ sed -n 's/.*\(PATERN\).*/\1/p' input_f
 :    ~$ sed 's/.*\(PATERN\).*/\1/' input_f
 
-**** sed-170903233956 
+**** sed-170903233956
 display the last line of the file:
 :    ~$ sed -n '$p' input_f
 :    ~$ sed '$!d' input_f
+
+**** sed-171004115515
+coment out line with sertain PATERN:
+:    ~$ sed -i -e '/PATERN/ s/^#*/#/' input_f
 
 *** sed::files
 *** sed::see-also
